Change mail API dependency
Use mailapi instead of mail. I don't know whether this makes any difference, in
fact.

--- a/pom.xml
+++ b/pom.xml
@@ -83,8 +83,8 @@
         </dependency>
         <dependency>
             <groupId>javax.mail</groupId>
-            <artifactId>mail</artifactId>
-            <version>1.4.4</version>
+            <artifactId>mailapi</artifactId>
+            <version>1.4.3</version>
         </dependency>
         <dependency>
             <groupId>rhino</groupId>
