--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>eel.kitchen</groupId>
     <artifactId>json-schema-validator</artifactId>
-    <version>0.0.1</version>
     <name>json-schema-validator</name>
-    <description>A Java implementation of the JSON Schema specification
-        (http://json-schema.org)
-    </description>
+    <version>0.1</version>
+    <packaging>jar</packaging>
+    <description>A Java implementation of the JSON Schema specification</description>
+    <url>https://github.com/fge/json-schema-validator</url>
     <build>
         <plugins>
             <plugin>
@@ -95,7 +95,25 @@
     <licenses>
         <license>
             <name>LGPLv3 or later</name>
-            <url>LICENSE</url>
+            <url>http://www.gnu.org/licenses/lgpl.html</url>
         </license>
     </licenses>
+    <scm>
+        <url>git@github.com:fge/json-schema-validator</url>
+        <connection>scm:git:git@github.com:fge/json-schema-validator</connection>
+        <developerConnection>scm:git:git@github.com:fge/json-schema-validator</developerConnection>
+    </scm>
+    <developers>
+        <developer>
+            <name>Francis Galiegue</name>
+            <roles>
+                <role>Initial developer</role>
+            </roles>
+        </developer>
+    </developers>
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
 </project>
