Some changes in pom.xml and javadoc...
Write correct @see links. Make correct references to the Jackson API and Java
1.6 API. And add maven-gpg-plugin.

--- a/pom.xml
+++ b/pom.xml
@@ -37,11 +37,30 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
+                <configuration>
+                    <links>
+                        <link>http://jackson.codehaus.org/1.9.0/javadoc</link>
+                        <link>http://download.oracle.com/javase/6/docs/api</link>
+                    </links>
+                </configuration>
                 <executions>
                     <execution>
                         <phase>package</phase>
                         <goals>
                             <goal>javadoc</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
                         </goals>
                     </execution>
                 </executions>
