--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
                     <links>
                         <link>http://jackson.codehaus.org/1.9.0/javadoc</link>
                         <link>http://download.oracle.com/javase/6/docs/api</link>
+                        <link>http://joda-time.sourceforge.net/api-release</link>
                     </links>
                 </configuration>
                 <executions>
@@ -125,6 +126,11 @@
             <groupId>com.googlecode.libphonenumber</groupId>
             <artifactId>libphonenumber</artifactId>
             <version>4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.0</version>
         </dependency>
     </dependencies>
     <licenses>
