--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,11 @@
             <artifactId>joda-time</artifactId>
             <version>2.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>10.0.1</version>
+        </dependency>
     </dependencies>
     <licenses>
         <license>
