--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
                         <link>http://jackson.codehaus.org/1.9.0/javadoc</link>
                         <link>http://download.oracle.com/javase/6/docs/api</link>
                         <link>http://joda-time.sourceforge.net/api-release</link>
+                        <link>http://docs.guava-libraries.googlecode.com/git/javadoc</link>
                     </links>
                 </configuration>
                 <executions>
