--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,8 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
                     <links>
-                        <link>http://jackson.codehaus.org/1.9.4/javadoc</link>
+                        <link>http://fasterxml.github.com/jackson-databind/javadoc/2.0.0/</link>
+                        <link>http://fasterxml.github.com/jackson-core/javadoc/2.0.0/</link>
                         <link>http://download.oracle.com/javase/6/docs/api</link>
                         <link>http://joda-time.sourceforge.net/api-release</link>
                         <link>http://docs.guava-libraries.googlecode.com/git/javadoc</link>
