--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,7 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>1.9.0</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <licenses>
