Two more javadoc fixes
* The JDK API has moved, fix URL.
* Fix reference to ValidationContext in overview.html.

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
                     <links>
                         <link>http://fasterxml.github.com/jackson-databind/javadoc/2.0.4/</link>
                         <link>http://fasterxml.github.com/jackson-core/javadoc/2.0.4/</link>
-                        <link>http://download.oracle.com/javase/6/docs/api</link>
+                        <link>http://docs.oracle.com/javase/6/docs/api</link>
                         <link>http://joda-time.sourceforge.net/api-release</link>
                         <link>http://docs.guava-libraries.googlecode.com/git/javadoc</link>
                         <link>http://www.decodified.com/parboiled/api/core</link>
