pom.xml: also generate javadoc for private/package local/etc stuff
Signed-off-by: Francis Galiegue <fgaliegue@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
                         <link>http://joda-time.sourceforge.net/api-release</link>
                         <link>http://docs.guava-libraries.googlecode.com/git/javadoc</link>
                     </links>
+                    <show>private</show>
                 </configuration>
                 <executions>
                     <execution>
