Start to add examples
First basic example wiht a hypothetic JSON Schema description of /etc/fstab.

More to come to demonstrate the different features of JsonSchemaFactory.

Signed-off-by: Francis Galiegue <fgaliegue@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
                         <link>http://joda-time.sourceforge.net/api-release</link>
                         <link>http://docs.guava-libraries.googlecode.com/git/javadoc</link>
                     </links>
+                    <docfilessubdirs>true</docfilessubdirs>
                 </configuration>
                 <executions>
                     <execution>
