pom.xml: show warnings and deprecations on compile
Signed-off-by: Francis Galiegue <fgaliegue@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
+                    <showWarnings>true</showWarnings>
+                    <showDeprecation>true</showDeprecation>
                 </configuration>
             </plugin>
             <plugin>
