Make FEST a test dependency, not runtime...
Oops.

Signed-off-by: Francis Galiegue <fgaliegue@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,7 @@
             <groupId>org.easytesting</groupId>
             <artifactId>fest-assert</artifactId>
             <version>1.4</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <licenses>
