Add a link to the -core javadoc in pom.xml
And make the javadoc generate without warning.

Not that there is much of it at the moment, though.

Signed-off-by: Francis Galiegue <fgaliegue@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
                         <link>http://docs.oracle.com/javase/6/docs/api</link>
                         <link>http://joda-time.sourceforge.net/api-release</link>
                         <link>http://docs.guava-libraries.googlecode.com/git/javadoc</link>
+                        <link>http://fge.github.com/json-schema-core/</link>
                     </links>
                     <docfilessubdirs>true</docfilessubdirs>
                 </configuration>
