--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
                         <link>http://docs.oracle.com/javase/6/docs/api</link>
                         <link>http://joda-time.sourceforge.net/api-release</link>
                         <link>http://docs.guava-libraries.googlecode.com/git/javadoc</link>
-                        <link>http://fge.github.com/json-schema-core/</link>
+                        <link>http://fge.github.com/json-schema-core/devel/</link>
                     </links>
                     <docfilessubdirs>true</docfilessubdirs>
                 </configuration>
@@ -81,7 +81,7 @@
         <dependency>
             <groupId>com.github.fge</groupId>
             <artifactId>json-schema-core</artifactId>
-            <version>0.99.2</version>
+            <version>0.99.3</version>
         </dependency>
         <dependency>
             <groupId>javax.mail</groupId>
