--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <groupId>com.github.fge</groupId>
     <artifactId>json-schema-validator</artifactId>
     <name>json-schema-validator</name>
-    <version>1.99.14-SNAPSHOT</version>
+    <version>1.99.14</version>
     <packaging>jar</packaging>
     <description>A Java implementation of the JSON Schema specification</description>
     <url>https://github.com/fge/json-schema-validator</url>
