Modify pom.xml for OSGi-capable deployments
This patch does two things:

* adds the Apache Felix Bundle plugin to the pom file which will generate the
  appropriate OSGi headers;
* change the packaging type from 'jar' to 'bundle' to enable the bundle plugin to
  join the build.

'bundle' is the same process as 'jar' with the extra step of scanning the
classes and generating the OSGi headers into META-INF/MANIFEST.MF.  The only
difference between 'bundle' and 'jar' are the extra headers in the manifest.

[mbishop: I marked a few packages as optional because they are used in specific
types of attributes that may not be used. If a system wants to use those types
(like phone number) they can add the appropriate jars to their OSGi environment
and be good to go.]

[fge: modify commit message]

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <artifactId>json-schema-validator</artifactId>
     <name>json-schema-validator</name>
     <version>2.1.4-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>bundle</packaging>
     <description>A Java implementation of the JSON Schema specification</description>
     <url>https://github.com/fge/json-schema-validator</url>
     <build>
@@ -74,6 +74,22 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <extensions>true</extensions>
+                <version>2.3.7</version>
+                <configuration>
+                    <instructions>
+                        <Import-Package>
+                            com.google.i18n.phonenumbers.*;resolution:=optional,
+                            javax.mail.internet.*;resolution:=optional,
+                            org.joda.time.*;resolution:=optional,
+                            *
+                        </Import-Package>
+                    </instructions>
+                </configuration>
             </plugin>
         </plugins>
     </build>
