Get rid of ValidationConfigurationMessages
Still some cleanup to do, however.

Signed-off-by: Francis Galiegue <fgaliegue@gmail.com>

--- a/src/main/resources/validationCfg.properties
+++ b/src/main/resources/validationCfg.properties
@@ -2,3 +2,13 @@ nullLibrary = library cannot be null
 dupLibrary = a library already exists for this URI
 nullVersion = version cannot be null
 nullInstance = instance cannot be null
+nullName = keyword name cannot be null
+nullSyntaxChecker = syntax checker must not be null
+nullDigester = digester must not be null
+noAppropriateConstructor = validator class has no appropriate constructor (expected a constructor with a JsonNode as an argument)
+noChecker = cannot build a keyword without a syntax checker
+malformedKeyword = when a validator class is defined, a digester must also be present
+nullFormat = format attribute name cannot be null
+nullAttribute = format attribute cannot be null
+nullKeyword = keyword cannot be null
+nullType = type must not be null
