Update to json-schema-core 1.1.5, lots of changes
* All keyword validators/format attribute validators use a message bundle.
* Add the syntax and validation message bundles to ValidationConfiguration.
* Modify many constructors accordingly.

Also modify examples 8 and 9 to add some messages. Takes care of one part of
issue #55, but lots of work is left to do.

Signed-off-by: Francis Galiegue <fgaliegue@gmail.com>

--- a/src/main/resources/validationCfg.properties
+++ b/src/main/resources/validationCfg.properties
@@ -1,3 +1,7 @@
+nullReportProvider = report provider must not be null
+nullLoadingCfg = loading configuration must not be null
+nullValidationCfg = validation configuration must not be null
+nullMessageBundle = message bundle cannot be null
 nullLibrary = library cannot be null
 dupLibrary = a library already exists for this URI
 nullVersion = version cannot be null
