--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -15,6 +15,17 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
+formatNotSupported = format attribute not supported
+invalidDateFormat = input does not have the expected format
+invalidEmail = input is not a valid email address
+invalidHostname = input is not a valid hostname
+invalidIPV4Addr = input is not a valid IPv4 address
+invalidIPV6Addr = input is not a valid IPv6 address
+invalidECMA262Regex = input is not a valid ECMA 262 regular expression
+invalidPhoneNumber = input is not recognized as a phone number
+epochNegative = epoch is negative
+epochOverflow = possible epoch overflow (greater than 2^31 - 1 seconds)
+invalidURI = input is not a valid URI
 ADDITIONAL_ITEMS_NOT_ALLOWED = additional items are not allowed
 ARRAY_IS_TOO_SHORT = array does not have enough elements
 ARRAY_IS_TOO_LONG = array has too many elements
