Improve error messages, part 1
Signed-off-by: Francis Galiegue <fgaliegue@gmail.com>

--- a/src/main/resources/com/github/fge/jsonschema/validator/configuration.properties
+++ b/src/main/resources/com/github/fge/jsonschema/validator/configuration.properties
@@ -3,15 +3,17 @@ nullLoadingCfg = loading configuration must not be null
 nullValidationCfg = validation configuration must not be null
 nullMessageBundle = message bundle cannot be null
 nullLibrary = library cannot be null
-dupLibrary = a library already exists for this URI
+dupLibrary = a library already exists for URI "%s"
 nullVersion = version cannot be null
 nullInstance = instance cannot be null
 nullName = keyword name cannot be null
-nullSyntaxChecker = syntax checker must not be null
-nullDigester = digester must not be null
-noAppropriateConstructor = validator class has no appropriate constructor (expected a constructor with a JsonNode as an argument)
-noChecker = cannot build a keyword without a syntax checker
-malformedKeyword = when a validator class is defined, a digester must also be present
+nullSyntaxChecker = attempt to register a null syntax checker for keyword "%s"
+nullDigester = attempt to register a null digester for keyword "%s"
+noAppropriateConstructor = class "%2$s" has no appropriate constructor \
+  (keyword "%1$s"; expected a constructor with a JsonNode as an argument)
+noChecker = attempt to build keyword "%s" without a syntax checker
+malformedKeyword = attempt to build keyword "%s" with a validator but no \
+  digester
 nullFormat = format attribute name cannot be null
 nullAttribute = format attribute cannot be null
 nullKeyword = keyword cannot be null
