Finish configuration error messages conversion/improvements
Signed-off-by: Francis Galiegue <fgaliegue@gmail.com>

--- a/src/main/resources/com/github/fge/jsonschema/validator/configuration.properties
+++ b/src/main/resources/com/github/fge/jsonschema/validator/configuration.properties
@@ -15,6 +15,6 @@ noChecker = attempt to build keyword "%s" without a syntax checker
 malformedKeyword = attempt to build keyword "%s" with a validator but no \
   digester
 nullFormat = format attribute name cannot be null
-nullAttribute = format attribute cannot be null
-nullKeyword = keyword cannot be null
-nullType = type must not be null
+nullAttribute = attempt to register null implementation of format attribute "%s"
+nullKeyword = attempt to add null keyword to library
+nullType = null type argument to digester constructor
