--- a/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
+++ b/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
@@ -15,10 +15,10 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-formatNotSupported = format attribute not supported
-invalidDateFormat = input does not have the expected format
-invalidEmail = input is not a valid email address
-invalidHostname = input is not a valid hostname
+warn.format.notSupported = format attribute "%s" not supported
+err.common.invalidDate = value "%s" is invalid against requested date format(s) %s
+err.common.invalidEmail = value "%s" is not a valid email address
+invalidHostname = value "%s" is not a valid hostname
 invalidIPV4Addr = input is not a valid IPv4 address
 invalidIPV6Addr = input is not a valid IPv6 address
 invalidECMA262Regex = input is not a valid ECMA 262 regular expression
