Message modifications, part 2
* Rename many keys.
* Modify some messages to now include numbers in arguments.
* Done with formats, start keywords.

Signed-off-by: Francis Galiegue <fgaliegue@gmail.com>

--- a/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
+++ b/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
@@ -16,22 +16,22 @@
 #
 
 warn.format.notSupported = format attribute "%s" not supported
-err.common.invalidDate = value "%s" is invalid against requested date format(s) %s
-err.common.invalidEmail = value "%s" is not a valid email address
-invalidHostname = value "%s" is not a valid hostname
-invalidIPV4Addr = input is not a valid IPv4 address
-invalidIPV6Addr = input is not a valid IPv6 address
-invalidECMA262Regex = input is not a valid ECMA 262 regular expression
-invalidPhoneNumber = input is not recognized as a phone number
-epochNegative = epoch is negative
-epochOverflow = possible epoch overflow (greater than 2^31 - 1 seconds)
-invalidURI = input is not a valid URI
-ADDITIONAL_ITEMS_NOT_ALLOWED = additional items are not allowed
-ARRAY_IS_TOO_SHORT = array does not have enough elements
-ARRAY_IS_TOO_LONG = array has too many elements
-ELEMENTS_NOT_UNIQUE = array must not contain duplicate elements
-NUMBER_TOO_SMALL = number is lower than the required minimum
-NUMBER_EX_SMALL = number is not strictly greater than the required minimum
+err.format.invalidDate = string "%s" is invalid against requested date format(s) %s
+err.format.invalidEmail = string "%s" is not a valid email address
+err.format.invalidHostname = string "%s" is not a valid hostname
+err.format.invalidIPv4Address = string "%s" is not a valid IPv4 address
+err.format.invalidIPV6Address = string "%s" is not a valid IPv6 address
+err.format.invalidRegex = string "%s" is not a valid ECMA 262 regular expression
+err.format.invalidPhoneNumber = string "%s" is not recognized as a phone number
+warn.format.epoch.negative = value for epoch is negative (%s), probably not what you want
+warn.format.epoch.overflow = value for epoch may lead to overflow (found %s, which is greater than 2^31 - 1)
+err.format.invalidURI = string "%s" is not a valid URI
+err.common.additionalItems.notAllowed = schema only allows %d elements in array but instance has %d elements
+err.common.minItems.arrayTooShort = array is too short: must have at least %d elements but instance has %d elements
+err.common.maxItems.arrayTooLarge = array is too long: must have at most %d elements but instance has %d elements
+err.common.uniqueItems.duplicateElements = array must not contain duplicate elements
+err.common.minimum.tooSmall = numeric instance is lower than the required minimum (minimum: %s, found: %s)
+err.common.minimum.notExclusive = numeric instance is not strictly greater than the required minimum %s
 NUMBER_TOO_LARGE = number is greater than the required maximum
 NUMBER_EX_LARGE = number is not strictly lower than the required maximum
 ADDITIONAL_PROPERTIES_NOT_ALLOWED = additional properties are not allowed
