Reporting message improvements, part 4
Had to modify one validator (and the test rendering function) so that it works,
though.

Signed-off-by: Francis Galiegue <fgaliegue@gmail.com>

--- a/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
+++ b/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
@@ -32,13 +32,13 @@ err.common.maxItems.arrayTooLarge = array is too long: must have at most %d elem
 err.common.uniqueItems.duplicateElements = array must not contain duplicate elements
 err.common.minimum.tooSmall = numeric instance is lower than the required minimum (minimum: %s, found: %s)
 err.common.minimum.notExclusive = numeric instance is not strictly greater than the required minimum %s
-NUMBER_TOO_LARGE = number is greater than the required maximum
-NUMBER_EX_LARGE = number is not strictly lower than the required maximum
-ADDITIONAL_PROPERTIES_NOT_ALLOWED = additional properties are not allowed
-STRING_TOO_SHORT = string is too short
-STRING_TOO_LONG = string is too long
-REGEX_NO_MATCH = regex does not match input string
-VALUE_NOT_IN_ENUM = instance does not match any enum value
+err.common.maximum.tooLarge = numeric instance is greater than the required maximum (maximum: %s, found: %s)
+err.common.maximum.notExclusive =  numeric instance is not strictly lower than the required maximum %s
+err.common.additionalProperties.notAllowed = object instance has properties which are not allowed by the schema: %s
+err.common.minLength.tooShort = string "%s" is too short (length: %d, required minimum: %d)
+err.common.maxLength.tooLong = string "%s" is too long (length: %d, maximum allowed: %d)
+err.common.pattern.noMatch = ECMA 262 regex "%s" does not match input string "%s"
+err.common.enum.notInEnum = instance value (%s) not found in enum (possible values: %s)
 NON_ZERO_DIVISION_REMAINDER = remainder of division is not zero
 NOT_ENOUGH_MEMBERS_IN_OBJECT = object has too few properties
 TOO_MANY_MEMBERS_IN_OBJECT = object has too many properties
