--- a/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
+++ b/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
@@ -39,12 +39,12 @@ err.common.minLength.tooShort = string "%s" is too short (length: %d, required m
 err.common.maxLength.tooLong = string "%s" is too long (length: %d, maximum allowed: %d)
 err.common.pattern.noMatch = ECMA 262 regex "%s" does not match input string "%s"
 err.common.enum.notInEnum = instance value (%s) not found in enum (possible values: %s)
-NON_ZERO_DIVISION_REMAINDER = remainder of division is not zero
-NOT_ENOUGH_MEMBERS_IN_OBJECT = object has too few properties
-TOO_MANY_MEMBERS_IN_OBJECT = object has too many properties
-MISSING_REQUIRED_MEMBERS = missing required property(ies)
-MISSING_PROPERTY_DEPS = missing property dependencies
-TYPE_NO_MATCH = instance type does not match any allowed primitive type
+err.common.divisor.nonZeroRemainder = remainder of division is not zero (%s / %s)
+err.draftv4.minProperties.notEnoughMembers = object has too few properties (found %d but schema requires at least %d)
+err.draftv4.maxProperties.tooManyMembers = object has too many properties (found %d but schema requires at most %d)
+err.common.object.missingMembers = object has missing required properties (%s)
+err.common.dependencies.missingPropertyDeps = property "%s" of object has missing property dependencies (schema requires %s; missing: %s)
+err.common.typeNoMatch = instance type (%s) does not match any allowed primitive type (allowed: %s)
 ANYOF_FAIL = instance failed to match at least one schema
 ALLOF_FAIL = instance failed to match all schemas
 ONEOF_FAIL = instance failed to match exactly one schema
