Finish message conversion -- phew
Checks for messages are too hard however, they need to be unified.

Signed-off-by: Francis Galiegue <fgaliegue@gmail.com>

--- a/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
+++ b/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
@@ -45,9 +45,9 @@ err.draftv4.maxProperties.tooManyMembers = object has too many properties (found
 err.common.object.missingMembers = object has missing required properties (%s)
 err.common.dependencies.missingPropertyDeps = property "%s" of object has missing property dependencies (schema requires %s; missing: %s)
 err.common.typeNoMatch = instance type (%s) does not match any allowed primitive type (allowed: %s)
-ANYOF_FAIL = instance failed to match at least one schema
-ALLOF_FAIL = instance failed to match all schemas
-ONEOF_FAIL = instance failed to match exactly one schema
-NOT_FAIL = instance matches a schema which it should not
-DISALLOWED_TYPE = instance type is not allowed
-DISALLOW_SCHEMA = instance matches one or more disallowed schema(s)
+err.common.schema.noMatch = instance failed to match at least one required schema among %d
+err.draftv4.allOf.fail = instance failed to match all required schemas (matched only %d out of %d)
+err.draftv4.oneOf.fail = instance failed to match exactly one schema (matched %d out of %d)
+err.draftv4.not.fail = instance matched a schema which it should not have
+err.draftv3.disallow.type = instance is of type %s, which is explicitly forbidden (disallowed: %s)
+err.draftv3.disallow.schema = instance matched %d out of %d explicitly forbidden schema(s)
