validation.properties: add crude comments
Signed-off-by: Francis Galiegue <fgaliegue@gmail.com>

--- a/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
+++ b/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
@@ -15,17 +15,15 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-warn.format.notSupported = format attribute "%s" not supported
-err.format.invalidDate = string "%s" is invalid against requested date format(s) %s
-err.format.invalidEmail = string "%s" is not a valid email address
-err.format.invalidHostname = string "%s" is not a valid hostname
-err.format.invalidIPv4Address = string "%s" is not a valid IPv4 address
-err.format.invalidIPV6Address = string "%s" is not a valid IPv6 address
-err.format.invalidRegex = string "%s" is not a valid ECMA 262 regular expression
-err.format.invalidPhoneNumber = string "%s" is not recognized as a phone number
-warn.format.epoch.negative = value for epoch is negative (%s), probably not what you want
-warn.format.epoch.overflow = value for epoch may lead to overflow (found %s, which is greater than 2^31 - 1)
-err.format.invalidURI = string "%s" is not a valid URI
+#
+# NOTE: use %s for numeric instances which you don't know whether they will be
+# integers or decimal numbers; no builtin format pattern appart from this one
+# can handle numbers of arbitrary precision and/or scale.
+#
+
+#
+# Validator messages
+#
 err.common.additionalItems.notAllowed = schema only allows %d elements in array but instance has %d elements
 err.common.minItems.arrayTooShort = array is too short: must have at least %d elements but instance has %d elements
 err.common.maxItems.arrayTooLarge = array is too long: must have at most %d elements but instance has %d elements
@@ -51,3 +49,18 @@ err.draftv4.oneOf.fail = instance failed to match exactly one schema (matched %d
 err.draftv4.not.fail = instance matched a schema which it should not have
 err.draftv3.disallow.type = instance is of type %s, which is explicitly forbidden (disallowed: %s)
 err.draftv3.disallow.schema = instance matched %d out of %d explicitly forbidden schema(s)
+
+#
+# Format messages
+#
+warn.format.notSupported = format attribute "%s" not supported
+err.format.invalidDate = string "%s" is invalid against requested date format(s) %s
+err.format.invalidEmail = string "%s" is not a valid email address
+err.format.invalidHostname = string "%s" is not a valid hostname
+err.format.invalidIPv4Address = string "%s" is not a valid IPv4 address
+err.format.invalidIPV6Address = string "%s" is not a valid IPv6 address
+err.format.invalidRegex = string "%s" is not a valid ECMA 262 regular expression
+err.format.invalidPhoneNumber = string "%s" is not recognized as a phone number
+warn.format.epoch.negative = value for epoch is negative (%s), probably not what you want
+warn.format.epoch.overflow = value for epoch may lead to overflow (found %s, which is greater than 2^31 - 1)
+err.format.invalidURI = string "%s" is not a valid URI
