--- a/legacy/pom.xml
+++ b/legacy/pom.xml
@@ -172,7 +172,7 @@
         <dependency>
             <groupId>com.github.fge</groupId>
             <artifactId>json-schema-core</artifactId>
-            <version>1.1.7</version>
+            <version>1.1.8-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>javax.mail</groupId>
