Import format attributes from json-schema-formats
Signed-off-by: Francis Galiegue <fgaliegue@gmail.com>

--- a/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
+++ b/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
@@ -64,3 +64,11 @@ err.format.invalidPhoneNumber = string "%s" is not recognized as a phone number
 warn.format.epoch.negative = value for epoch is negative (%s), probably not what you want
 warn.format.epoch.overflow = value for epoch may lead to overflow (found %s, which is greater than 2^31 - 1)
 err.format.invalidURI = string "%s" is not a valid URI
+err.format.hexString.badLength = input string has bad length (%d, expected %d)
+err.format.hexString.illegalChars = input string has illegal characters
+err.format.base64.badLength = input has illegal length (must be a multiple of 4, found %d)
+err.format.base64.illegalChars = input is not a valid Base64 string: illegal characters
+err.format.jsonpointer.invalid = input string "%s" is not a valid JSON Pointer
+err.format.macAddr.invalid = input string "%s" is not a valid MAC address
+err.format.uriTemplate.invalid = input string "%s" is not a valid URI template
+err.format.UUID.invalid = input string "%s" is not a valid UUID
