Start to add test for extra format attributes, starting with "base64"
Signed-off-by: Francis Galiegue <fgaliegue@gmail.com>

--- a/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
+++ b/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
@@ -67,7 +67,7 @@ err.format.invalidURI = string "%s" is not a valid URI
 err.format.hexString.badLength = input string has bad length (%d, expected %d)
 err.format.hexString.illegalChars = input string has illegal characters
 err.format.base64.badLength = input has illegal length (must be a multiple of 4, found %d)
-err.format.base64.illegalChars = input is not a valid Base64 string: illegal characters
+err.format.base64.illegalChars = illegal character "%s" at index %d (not in Base64 alphabet)
 err.format.jsonpointer.invalid = input string "%s" is not a valid JSON Pointer
 err.format.macAddr.invalid = input string "%s" is not a valid MAC address
 err.format.uriTemplate.invalid = input string "%s" is not a valid URI template
