--- a/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
+++ b/src/main/resources/com/github/fge/jsonschema/validator/validation.properties
@@ -64,8 +64,8 @@ err.format.invalidPhoneNumber = string "%s" is not recognized as a phone number
 warn.format.epoch.negative = value for epoch is negative (%s), probably not what you want
 warn.format.epoch.overflow = value for epoch may lead to overflow (found %s, which is greater than 2^31 - 1)
 err.format.invalidURI = string "%s" is not a valid URI
-err.format.hexString.badLength = input string has bad length (%d, expected %d)
-err.format.hexString.illegalChars = input string has illegal characters
+err.format.hexString.badLength = input string has incorrect length (%d, expected %d)
+err.format.hexString.illegalChar = illegal character "%s" in input at index %d
 err.format.base64.badLength = input has illegal length (must be a multiple of 4, found %d)
 err.format.base64.illegalChars = illegal character "%s" at index %d (not in Base64 alphabet)
 err.format.jsonpointer.invalid = input string "%s" is not a valid JSON Pointer
