Add a comment about javadoc mishaps
Signed-off-by: Francis Galiegue <fgaliegue@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,10 @@ javadoc.options {
     docFilesSubDirs = true;
 }
 
+/*
+ * Equally annoyingly, the docFilesSubDirs option above does not seem to have
+ * any effect :/
+ */
 task copyDocFiles(dependsOn: javadoc) << {
     copy {
         from("src/main/javadoc") {
