Upgrade to gradle 1.10
Signed-off-by: Francis Galiegue <fgaliegue@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,7 @@ test {
     useTestNG() {
         useDefaultListeners = true;
     };
-    testReport = false;
+    reports.html.enabled = false;
 }
 
 /*
@@ -111,7 +111,7 @@ artifacts {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = "1.6";
+    gradleVersion = "1.10";
 }
 
 task pom << {
